--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "somatotype app",
   "main": "server.js",
   "scripts": {
+    "client-instal": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \" npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
