--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \" npm run server\" \"npm run client\""
+    "dev": "concurrently \" npm run server\" \"npm run client\"",
+    "build": "npm install  && cd client && npm install && npm run build",
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
   },
   "repository": {
     "type": "git",
