--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "somatotype app",
   "main": "server.js",
   "scripts": {
-    "client-instal": "npm install --prefix client",
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
