--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "homepage": "https://github.com/walter-clayton/somatotype#readme",
   "dependencies": {
-    "concurrently": "^7.5.0",
+    "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "concurrently": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
