--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "client",
   ],
   "compilerOptions": {
+    "outDir": "dist",
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
