--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "react-share": "^4.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
