--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
