--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "react-share": "^4.4.1",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.18",
+    "@types/react-swipeable-views-utils": "^0.13.4",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
