--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
+    "react-swipeable-views": "^0.14.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
