--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
+    "react-component-export-image": "^1.0.6",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
