--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "nodemailer": "^6.8.0",
+    "react-ga4": "^1.4.1",
     "react-share": "^4.4.1",
     "react-swipeable-views": "^0.14.0"
   },
