--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "react-ga": "^3.3.1",
     "react-ga4": "^1.4.1",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-share": "^4.4.1",
     "react-swipeable-views": "^0.14.0",
     "react-transition-group": "^4.4.5",
