--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^6.6.2",
     "nodemailer": "^6.8.0",
     "react-ga4": "^1.4.1",
+    "react-script": "^2.0.5",
     "react-share": "^4.4.1",
     "react-swipeable-views": "^0.14.0"
   },
