--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/walter-clayton/somatotype#readme",
   "dependencies": {
-    "axios": "^1.2.3",
+    "axios": "^1.6.5",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "concurrently": "^7.5.0",
@@ -35,6 +35,7 @@
     "mongoose": "^6.6.2",
     "nodemailer": "^6.8.0",
     "react-ga4": "^1.4.1",
+    "react-render-html": "^0.6.0",
     "react-script": "^2.0.5",
     "react-share": "^4.4.1",
     "react-swipeable-views": "^0.14.0"
