--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.5.0",
     "cors": "^2.8.5",
+    "d3": "^7.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
@@ -41,6 +42,7 @@
     "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
