--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^6.6.2",
     "nodemailer": "^6.8.0",
     "react-ga4": "^1.4.1",
+    "react-icons": "^5.0.1",
     "react-render-html": "^0.6.0",
     "react-script": "^2.0.5",
     "react-share": "^4.4.1",
