--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-ga4": "^1.4.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-share": "^4.4.1",
