--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^5.6.0",
     "html2canvas": "^1.4.1",
     "nth-check": "^2.1.1",
+    "postcss": "^8.4.36",
     "pretty-error": "^4.0.0",
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
@@ -66,6 +67,7 @@
     ]
   },
   "overrides": {
-    "nth-check": "$nth-check"
+    "nth-check": "$nth-check",
+    "postcss": "$postcss"
   }
 }
