--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-share": "^4.4.1",
+    "react-swipeable-views": "^0.14.0",
     "react-transition-group": "^4.4.5",
     "react-youtube": "^10.1.0",
     "styled-components": "^5.3.6",
@@ -68,6 +69,9 @@
   },
   "overrides": {
     "nth-check": "$nth-check",
-    "postcss": "$postcss"
+    "postcss": "$postcss",
+    "react-swipeable-views": {
+      "react": "^18.2.0"
+    }
   }
 }
