--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
-    "start": "npx nodemon --files ./index.ts",
-    "server": "nodemon --files ./index.ts",
+    "start": "npx nodemon --exec ts-node ./index.ts",
+    "server": "nodemon --exec ts-node ./index.ts",
     "client": "npm start --prefix client",
-    "dev": "concurrently \" npm run server\" \"npm run client\"",
-    "build": "npm install  && cd client && npm install && npm run build",
-    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "npm install && npm run build-ts && cd client && npm install && npm run build",
+    "build-ts": "tsc",
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,14 @@
   },
   "author": "Walter Clayton",
   "license": "UNLICENSED",
-  "private": "true",
+  "private": true,
   "bugs": {
     "url": "https://github.com/walter-clayton/somatotype/issues"
   },
   "homepage": "https://github.com/walter-clayton/somatotype#readme",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "axios": "^1.2.3",
     "bcrypt": "^5.0.1",
@@ -44,7 +48,6 @@
     "@types/node": "^18.7.18",
     "@types/react-swipeable-views-utils": "^0.13.4",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
