--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
-    "start": "npx nodemon --exec ts-node ./index.ts",
-    "server": "nodemon --exec ts-node ./index.ts",
+    "start": "npx nodemon --files ./index.ts",
+    "server": "nodemon --files ./index.ts",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm install && npm run build-ts && cd client && npm install && npm run build",
-    "build-ts": "tsc",
-    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \" npm run server\" \"npm run client\"",
+    "build": "npm install  && cd client && npm install && npm run build",
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
   },
   "repository": {
     "type": "git",
@@ -19,14 +18,11 @@
   },
   "author": "Walter Clayton",
   "license": "UNLICENSED",
-  "private": true,
+  "private": "true",
   "bugs": {
     "url": "https://github.com/walter-clayton/somatotype/issues"
   },
   "homepage": "https://github.com/walter-clayton/somatotype#readme",
-  "engines": {
-    "node": "16.x"
-  },
   "dependencies": {
     "axios": "^1.2.3",
     "bcrypt": "^5.0.1",
@@ -36,7 +32,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2",
+    "mongoose": "^6.6.2",
     "nodemailer": "^6.8.0",
     "react-ga4": "^1.4.1",
     "react-share": "^4.4.1",
@@ -45,9 +41,11 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.18",
     "@types/react-swipeable-views-utils": "^0.13.4",
     "nodemon": "^3.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
