--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
     "html2canvas": "^1.4.1",
+    "notistack": "^3.0.1",
     "nth-check": "^2.1.1",
     "postcss": "^8.4.36",
     "pretty-error": "^4.0.0",
