--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/d3": "^7.4.3",
     "axios": "^1.2.0",
+    "chart.js": "^4.4.2",
     "chokidar": "^3.6.0",
     "d3": "^7.9.0",
     "eslint-webpack-plugin": "^4.1.0",
@@ -27,6 +28,7 @@
     "postcss": "^8.4.36",
     "pretty-error": "^4.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-component-export-image": "^1.0.6",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
