--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,7 @@
     "react-youtube": "^10.1.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -79,5 +79,8 @@
     "react-swipeable-views": {
       "react": "^18.2.0"
     }
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.8"
   }
 }
