--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.18",
     "@types/react-swipeable-views-utils": "^0.13.4",
+    "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
