--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon --files ./index.ts",
     "client": "npm start --prefix client",
     "dev": "concurrently \" npm run server\" \"npm run client\"",
-    "build": "npm install  && cd client && npm install && npm run build",
+    "dev:staging": "cross-env REACT_APP_ENVIRONMENT=staging npm run dev",
+    "build": "set \"REACT_APP_ENVIRONMENT=staging\" && react-scripts build",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
   },
   "repository": {
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/walter-clayton/somatotype#readme",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "axios": "^1.2.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -32,7 +34,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.6.2",
+    "mongoose": "^8.3.1",
     "nodemailer": "^6.8.0",
     "react-ga4": "^1.4.1",
     "react-share": "^4.4.1",
@@ -41,11 +43,12 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.18",
     "@types/react-swipeable-views-utils": "^0.13.4",
     "@types/uuid": "^9.0.8",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.0",
+    "react-scripts": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
