--- a/.env.staging
+++ b/.env.staging
@@ -8,9 +8,9 @@ ACCESS_TOKEN_SECRET=‘588e884d65b9d20227ef44b6c5addcadcf07c976e82ce31c3272c5926
 # [Autorization > API KEY > Key: access_key and Value: $2b$10$u6QvBoaxNb45rCZ8WeHg9OcvSOsIohPAI9ZvN2msZ/ArCkYfO1jGu]
 # or
 # [Headers > Key: access_key and Value: $2b$10$u6QvBoaxNb45rCZ8WeHg9OcvSOsIohPAI9ZvN2msZ/ArCkYfO1jGu]
-ACCESS_KEY=‘u6QvBoaxNb45rCZ8WeHg9OcvSOsIohPAI9ZvN2msZArCkYfO1jGu’
+ACCESS_KEY=u6QvBoaxNb45rCZ8WeHg9OcvSOsIohPAI9ZvN2msZArCkYfO1jGu
 # IN3D token
 SCAN_ID=‘vUGyFxLsnHHpomxQXb0rjsq0Xo5FgRzoJVTHcL1as9xrJ_TCDC0PGa8RMU7cAZI1kA4lwNR2cL3HpL73tQ_Pmw’
 # nodemailer
-MAIL_USER=‘info.afitpilot@gmail.com’
-MAIL_PASSWORD=‘lhcsbnofzbqnwzaq
+MAIL_USER=info.afitpilot@gmail.com
+MAIL_PASSWORD=lhcsbnofzbqnwzaq
