--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.0",
     "chart.js": "^4.4.2",
     "chokidar": "^3.6.0",
+    "cors": "^2.8.5",
     "d3": "^7.9.0",
     "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
