--- a/client/.gitignore
+++ b/client/.gitignore
@@ -18,6 +18,11 @@
 .env.test.local
 .env.production.local
 .env-production
+.env.staging
+.env.development
+.env.development
+.env.staging
+
 
 npm-debug.log*
 yarn-debug.log*
