--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \" npm run server\" \"npm run client\"",
     "dev:staging": "cross-env REACT_APP_ENVIRONMENT=staging npm run dev",
-    "build": "set \"REACT_APP_ENVIRONMENT=staging\" && react-scripts build",
+    "build": "react-scripts build",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
   },
   "repository": {
