--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
   "name": "client",
-  "proxy": "http://localhost:8000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -86,6 +85,7 @@
     }
   },
   "devDependencies": {
+    "@types/react-swipeable-views": "^0.13.5",
     "@types/uuid": "^9.0.8",
     "cross-env": "^7.0.3"
   }
