--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "afitpilot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "install-front-back": "concurrently \"npm install --prefix ./server\" \"npm install --prefix ./client\"",
     "start": "concurrently \"npm run start:dev-v1 --prefix ./server\" \"npm run start --prefix ./client\"",
     "build": "concurrently \"npm run build-v1 --prefix ./server\" \"npm run build --prefix ./client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
