--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "@types/react-swipeable-views": "^0.13.5"
   }
 }
