--- a/package.json
+++ b/package.json
@@ -42,13 +42,18 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.18",
     "@types/react-swipeable-views-utils": "^0.13.4",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "react-scripts": "^5.0.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
